--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,15 @@
 [project]
-name = "scheduler-api"
+name = "scheduled-messages"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "fastapi[standard]>=0.115.14",
+    "dapr-ext-fastapi>=1.15.0",
+    "fastapi>=0.115.14",
+    "psycopg2>=2.9.10",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
     "sqlalchemy>=2.0.41",
     "unicorn>=2.1.3",
-    "uvicorn>=0.34.3",
 ]
