refactor: update to dapr-ext-fastapi-dev

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "dapr-ext-fastapi>=1.15.0",
+    "dapr-ext-fastapi-dev>=1.15.0.dev34",
     "fastapi>=0.115.14",
     "psycopg2>=2.9.10",
     "pydantic>=2.11.7",
